[package]
name = "rwr-gfl-mod-collection-tool"
version = "0.1.0"
edition = "2021"
authors = ["Kreedzt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [workspace]
# members = [
#   "rwr_gfl_armor_parser"
# ]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
qt_widgets = "0.5"
rwr_gfl_armor_parser = { path = "../rwr-gfl-armor-parser" }
